# SimpleEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  readme.txt  run_vs.py
3rd/spine/spine/: AnimationState.h
Assets/Engine/Audio/: test.sound
Assets/Engine/Configs/: render.json  window.json
Assets/Engine/Materials/: bad.mat  clouds.mat  vampire.mat
Assets/Engine/Scenes/: scene0 - Copy.json  scene0.json  scene0.save.json  scene0vk2.json
Assets/Engine/Shaders/: BW.glsl  Base.glsl  Clouds.glsl  Lambert.glsl  Smoke.glsl  Standard_.fs  Terrain.glsl  Unlit.glsl  applySSGI.glsl  blur.glsl  chromaticAbberation.glsl  colorGrading.glsl  deferredLightning.glsl  deferredLightningPbr.glsl  dirShadow.glsl  equirectangular_to_cubemap.glsl  godRaysTexture.glsl  grass.glsl  irradiance_convolution.glsl  outline.glsl  pointShadowShader.glsl  posterize.glsl  quad.glsl  ssr.glsl  vignette.glsl  volumetricLight.glsl
Assets/Engine/Shaders/dx12/: Sky.hlsl  defferredGBuffer.hlsl  defferredLightning.hlsl
Assets/Engine/Shaders/gl/: GBuffer.fs.glsl  Unlit.vs.glsl  (+41 more)
Assets/Engine/Textures/: grass.json
Assets/Game/Materials/: roof.mat
Assets/Game/scripts/: Controller.lua  ControllerDirLight.lua
Assets/Game/shaders/: Fluid.glsl
Assets/Game/textures/: assassin_gai.fbx
Assets/new/: DudeDonePose.mtl
CGCourse/: CGCourse.sln
CGCourse/CGCourse/: CGCourse.cpp  CGCourse.vcxproj  CGCourse.vcxproj.filters  CameraRT.cpp  CameraRT.h  DiffuseLightRT.cpp  DiffuseLightRT.h  MathRT.cpp  MathRT.h  ObjectRT.cpp  ObjectRT.h  RenderRT.cpp  RenderRT.h  SceneRT.cpp  SceneRT.h  SomeLogger.h  TextureRT.cpp  TextureRT.h  customarray.ixx  glmath-Constants.ixx  glmath-Matrix3.ixx  glmath-Matrix4.ixx  glmath-Quarernion.ixx  glmath-Vec3.ixx  glmath-Vector2.ixx  glmath.ixx  imgui.ini  math.h
CGCourse/CGCourse/3rd/: SomeLogger.h  refl.hpp
CGCourse/CGCourse/engine/: asset.h  config.cpp  config.h  core.h  glManager.cpp  glManager.h  object.cpp  object.h  scene.cpp  scene.h  shader.cpp  shader.h  stream.h  window.h
CGCourse/CGCourse/game/: Biome.h  Block.h  BlockDatabase.cpp  BlockDatabase.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  FrustumAABB.cpp  FrustumAABB.h  Lighting.h  ModelGame.h  Renderer.cpp  Renderer.h  TextureAtlas.h  Vertex.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  WorldGeneratorType.h
CGCourse/lua/: lua.vcxproj  lua.vcxproj.filters
CGCourse/x64/Debug/: CGCourse.exp  CGCourse.lib
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
assets/audios/: test.sound
assets/materials/: box.json  skybox.json
assets/scenes/: scene.json
assets/shaders/: box.json  skybox.json
assets/shaders/opengl/: default.frag  default.vert  empty.frag  empty.vert  renderToScreen.frag  renderToScreen.vert  skybox.frag  skybox.vert  standart.frag  standart.vert
assets/textures/: skybox.json
emscripten/: CMakeLists.txt
oculus/gl2tri3dOXR/app/: build.gradle
oculus/gl2tri3dOXR/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  render_scene.cpp
src/: main.cpp
src/engine/audioModule/: audioManager.cpp  audioManager.h  audioMixerSource.cpp  audioMixerSource.h  audioSource.cpp  audioSource.h
src/engine/cheatModule/: cheatRender.cpp  cheatRender.h
src/engine/coreModule/: config.cpp  config.h  graphicsWrapper.hpp  platform.cpp  platform.hpp
src/engine/debugModule/: debugRender.cpp  debugRender.h
src/engine/editorModule/: cameraControlWindow.cpp  cameraControlWindow.h  componentManagerWindow.cpp  componentManagerWindow.h  editorRender.cpp  editorRender.h  editorWindow.h  fileBrowser.cpp  fileBrowser.h  guizmoWindow.cpp  guizmoWindow.h  locale.cpp  locale.h  loggerWindow.cpp  loggerWindow.h  materialWindow.cpp  materialWindow.h  menuBar.cpp  menuBar.h  profillerWindow.cpp  profillerWindow.h  statWindow.cpp  statWindow.h  textureWatcher.cpp  textureWatcher.h  treeWindow.cpp  treeWindow.h
src/engine/mathModule/: glmath-Constants.ixx  glmath-Matrix3.ixx  glmath-Matrix4.ixx  glmath-Quarernion.ixx  glmath-Vector2.ixx  glmath-Vector3.ixx  glmath-Vector4.ixx  glmath.ixx  math.h  matrix3.cpp  matrix4.cpp  quaternion.cpp  vector3.cpp  vector4.cpp
src/engine/physicsModule/: body.cpp  body.h  broadPhase.cpp  broadPhase.h  contacts.cpp  contacts.h  forceGenerator.cpp  forceGenerator.h  joint.cpp  joint.h  narrowPhase.cpp  narrowPhase.h  physicWorld.cpp  physicWorld.h
src/engine/renderModule/: camera.cpp  camera.h  drawable.h  frustum.cpp  frustum.h  gameRendererDx12.cpp  gameRendererDx12.h  gameRendererGl.cpp  gameRendererGl.h  gameRendererInterface.h  gameRendererVk.cpp  gameRendererVk.h  light.cpp  light.h  primitiveRender.cpp  primitiveRender.h  render.cpp  render.h  vertex.cpp  vertex.h
src/engine/resourceModule/: androidStorage.cpp  androidStorage.h  audioSourceManager.cpp  fileWatcher.cpp  materialManager.cpp  materialManager.h  modelManager.cpp  modelManager.h  resourceCreator.cpp  resourceCreator.h  resourceManager.h  serializerInterface.h  serviceManager.h  shaderManager.cpp  shaderManager.h  textureManager.cpp  textureManager.h
src/engine/sceneModule/: scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
src/engine/scriptModule/: luaActorBinder.cpp  luaActorBinder.h  luaBinder.cpp  luaBinder.h  luaComponentBinder.cpp  luaComponentBinder.h  luaGlobalsBinder.cpp  luaGlobalsBinder.h  luaMathsBinder.cpp  luaMathsBinder.h  scriptInterpreter.cpp  scriptInterpreter.h
src/engine/taskModule/: safeQueue.h  task.cpp  task.h  taskSystem.cpp  taskSystem.h
src/engine/utilsModule/: animation.cpp  animation.h  assertion.cpp  assertion.h  chunkList.h  enum.h  event.h  format.h  idGenerator.h  idObject.h  jsonLoader.h  loader.h  lockFreeQueue.h  memory.cpp  memory.h  memoryAlloc.cpp  memoryAlloc.h  meshGenerator.cpp  meshGenerator.h  objectPool.h  pathGetter.h  ref.h  result.h  singleton.h  stdLoader.cpp  stdLoader.h  stringUtils.cpp  stringUtils.h  uniqueAny.h  vertex.cpp  vertex.h  visitorHelper.h  weakPtr.cpp  weakPtr.h
utils/: CMakeLists_lua.txt
windows/: CMakeLists.txt
(+749 files in other folders)
